pom.xml edit