@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>WebMapping</groupId>
-	<artifactId>MobileWebMapping</artifactId>
+	<groupId>openGDSMobileApplicationServer</groupId>
+	<artifactId>ApplicationServer</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0</version>
-	<name>MobileWebMapping</name>
+	<version>1.3.0</version>
+	<name>ApplicationServer</name>
 	<url>http://www.egovframe.go.kr</url>
 
 	<licenses>
@@ -193,20 +193,13 @@
                     <groupId>org.apache.tomcat.maven</groupId>
                     <artifactId>tomcat7-maven-plugin</artifactId>
                     <version>2.2</version>
-                   <!--  <configuration>
-                        <port>80</port>
-                        <path>/</path>
-                        <systemProperties>
-                            <JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
-                        </systemProperties>
-                    </configuration> -->  
                     <configuration>
-                    	<url>http://113.198.80.9:8081/manager/text</url>
-                    	<server>TomcatServer</server>
-                    	<path>/ApplicationServer</path>
-                    	<username>intruder</username>
-                    	<password>intruderPass</password>
-                    </configuration>
+						<url>http://localhost:8081/manager/text</url>
+						<server>TomcatServer</server>
+					  	<path>/ApplicationServer</path>
+					    <username>intruder</username>
+					    <password>intruderPass</password>
+					</configuration>  
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
